# get_github_emails

./: Readme.md  main.py  pyproject.toml
src/: github.py  utils.py
