[tool.poetry]
name = "get_github_emails"
version = "0.1.0"
description = "Get GitHub emails and userinfo"
authors = ["gauthamzz <thabeatsz@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
requests = "^2.25.0"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
